--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,4 +1,4 @@
-name: yoo-stack
+name: yo-stack
 
 services:
   app:
@@ -38,7 +38,7 @@ services:
       MYSQL_USER: yooadmin
       MYSQL_PASSWORD: yoopass
     ports:
-      - "3306:3306"
+      - "${HOST_MYSQL_PORT:-3306}:3306"
     volumes:
       - mysql_data:/var/lib/mysql
     healthcheck:
@@ -52,9 +52,9 @@ services:
     container_name: kafka
     restart: always
     ports:
-      - "9092:9092"
+      - "${HOST_KAFKA_PORT:-9092}:9092"
     environment:
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,INTERNAL://kafka:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:${HOST_KAFKA_PORT:-9092},INTERNAL://kafka:29092
       KAFKA_LISTENERS: PLAINTEXT://:9092,INTERNAL://:29092,CONTROLLER://:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,INTERNAL:PLAINTEXT,CONTROLLER:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
@@ -83,7 +83,7 @@ services:
     image: docker.redpanda.com/redpandadata/console:latest
     container_name: redpanda-console
     ports:
-      - "8080:8080"
+      - "${HOST_REDPANDA_CONSOLE_PORT:-8080}:8080"
     environment:
       - KAFKA_BROKERS=kafka:29092
     depends_on:
@@ -94,7 +94,7 @@ services:
     container_name: yoo-redis
     restart: always
     ports:
-      - "6379:6379"
+      - "${HOST_REDIS_PORT:-6379}:6379"
     volumes:
       - redis_data:/data
     healthcheck:
@@ -107,12 +107,32 @@ services:
     image: redis/redisinsight:latest
     container_name: redisinsight
     ports:
-      - "8001:5540"
+      - "${HOST_REDISINSIGHT_PORT:-8001}:5540"
     depends_on:
       redis:
         condition: service_healthy
     volumes:
       - redisinsight_data:/data
+
+  elastic:
+    image: elasticsearch:8.18.4
+    ports:
+      - "${HOST_ELASTIC_TRANSPORT_PORT:-9300}:9300"
+      - "${HOST_ELASTIC_HTTP_PORT:-9200}:9200"
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+    deploy:
+      resources:
+        limits:
+          memory: 512M # Use at most 512M MB of RAM
+
+  kibana: # Kibana is a web interface or dashboard for Elasticsearch
+    image: kibana:8.17.2
+    ports:
+      - "${HOST_KIBANA_PORT:-5601}:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=["http://elastic:9200"]
 
 volumes:
   mysql_data:
