--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "class-validator": "^0.14.2",
     "compression": "^1.8.0",
     "dataloader": "^2.2.3",
+    "dd-trace": "^5.74.0",
     "dotenv": "^17.0.1",
     "graphql": "^16.11.0",
     "ioredis": "^5.8.2",
