--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "doc": "npx @compodoc/compodoc -p tsconfig.json -d ./docs"
   },
   "dependencies": {
+    "@apollo/server": "^5.1.0",
     "@aws-sdk/client-s3": "^3.842.0",
     "@aws-sdk/s3-request-presigner": "^3.842.0",
     "@elastic/elasticsearch": "^8.15.0",
@@ -44,6 +45,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "async-retry": "^1.3.3",
+    "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -59,8 +61,10 @@
     "moment": "^2.30.1",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "node-fetch": "^3.3.2",
     "reflect-metadata": "^0.1.14",
     "rimraf": "^6.0.1",
+    "runtypes": "^7.0.4",
     "rxjs": "^7.8.2",
     "typeorm": "^0.3.25",
     "typeorm-naming-strategies": "^4.1.0"
