--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "docker:restart": "docker compose -f docker/docker-compose.yml down && docker compose -f docker/docker-compose.yml up -d",
     "db:seed": "ts-node -r tsconfig-paths/register database/seeder.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "migration:generate": "npm run typeorm migration:generate -- -d apps/api-gateway/src/commons/data-source.ts database/migrations/$npm_config_name",
-    "migration:run": "npm run typeorm migration:run -- -d apps/api-gateway/src/commons/data-source.ts",
+    "migration:generate": "node database/migration-generate.js",
+    "migration:run": "npm run typeorm migration:run -- -d apps/api-gateway/src/modules/commons/data-source.ts",
     "prebuild": "rimraf dist",
     "postinstall": "node build/postInstall.js",
     "build": "nest build",
@@ -56,6 +56,7 @@
     "graphql": "^16.11.0",
     "ioredis": "^5.8.2",
     "kafkajs": "^2.2.4",
+    "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "lru-cache": "^11.0.0",
     "moment": "^2.30.1",
@@ -119,9 +120,5 @@
     "moduleNameMapper": {
       "src/(.*)": "<rootDir>/src/$1"
     }
-  },
-  "resolutions": {
-    "string-width": "4.2.3",
-    "cli-table3/string-width": "4.2.3"
   }
 }
