--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "runtypes": "^7.0.4",
     "rxjs": "^7.8.2",
     "typeorm": "^0.3.25",
-    "typeorm-naming-strategies": "^4.1.0"
+    "typeorm-naming-strategies": "^4.1.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.26",
