--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "resolutions": {
+    "strip-ansi": "^6.0.1"
+  },
   "scripts": {
     "docker:up": "bash scripts/docker-up.sh",
     "docker:down": "docker compose -f docker/docker-compose.yml down",
@@ -90,6 +93,7 @@
     "eslint-plugin-prettier": "^5.5.1",
     "jest": "^30.0.3",
     "prettier": "^3.6.2",
+    "strip-ansi": "^6.0.1",
     "supertest": "^7.1.1",
     "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
